Fix layout error to Caroussel 2 on mobile

--- a/src/components/carousel2/styles.css
+++ b/src/components/carousel2/styles.css
@@ -199,4 +199,11 @@
   .carousel-caption-bottom {
     bottom: 25px;
   }
+
+  .box {
+    text-align: center;
+    max-width: 380px;
+    max-height: 500px;
+    margin: 0 auto 40px auto;
+  }
 }
